--- a/frontend/src/styles/layout.css
+++ b/frontend/src/styles/layout.css
@@ -74,7 +74,7 @@
     top: calc(72px); /* Start below header */
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 72px);
     z-index: 10;
   }
 
