--- a/frontend/src/styles/layout.css
+++ b/frontend/src/styles/layout.css
@@ -74,13 +74,13 @@
 .content-layout {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
+  height: 100vb;
+  width: 100vb;
 }
 
 .scene-container {
-  width: 100vw;
-  height: 100vh;
+  width: 100vb;
+  height: 100vb;
   background-color: aquamarine;
 }
 
